auto-test/tests/chapter_8/invalid_semantics/extra_credit/duplicate_variable_in_switch.c


int main(void) {
    int a = 1;
    switch (a) {
        
        
        int b = 2;
        case 0:
            a = 3;
            int b = 2;  
    }
    return 0;
}